Bugzilla bug #39967: replace an assertion in _PR_MD_GETFILEINFO64 by proper error checking and failure return.  Thanks to Bernd Mielke <mielke@licel.com> for the bug report. Modified files: ntio.c, w95io.c